idAndValueStore