@@ -4,8 +4,13 @@ import one.xingyi.events.utils.AsyncHelper;
 import one.xingyi.events.utils.JsonHelper;
 import one.xingyi.events.utils.StringHelper;
 
+import java.io.File;
+import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.OpenOption;
 import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
+import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executor;
 import java.util.function.Function;
@@ -15,14 +20,17 @@ public class IdAndValueFileStore implements IIdAndValueStore {
     public final Function<String, String> idToFileBaseName;
     private String metadataExtension;
 
+    private final IHash hash;
+
     public static String defaultMetadataExtension = "metadata";
 
     public static IdAndValueFileStore store(Executor executor, String dir, String separator, int... pattern) {
-        return new IdAndValueFileStore(executor, StringHelper.asFileNoExtension(dir, separator, pattern), defaultMetadataExtension);
+        return new IdAndValueFileStore(executor, IHash.sha256, StringHelper.asFileNoExtension(dir, separator, pattern), defaultMetadataExtension);
     }
 
-    public IdAndValueFileStore(Executor executor, Function<String, String> idToFileBaseName, String metadataExtension) {
+    public IdAndValueFileStore(Executor executor, IHash hash, Function<String, String> idToFileBaseName, String metadataExtension) {
         this.executor = executor;
+        this.hash = hash;
         this.idToFileBaseName = idToFileBaseName;
         this.metadataExtension = metadataExtension;
     }
@@ -34,16 +42,28 @@ public class IdAndValueFileStore implements IIdAndValueStore {
             var metadataString = Files.readString(Path.of(root + "." + metadataExtension));
             var metadata = JsonHelper.mapper.readValue(metadataString, Metadata.class);
             var bytes = Files.readAllBytes(Path.of(root + "." + metadata.extension()));
-            return new ValueAndMetadata(metadata, bytes);
+            return new ValueAndMetadata(bytes, metadata);
         });
     }
 
     @Override
-    public CompletableFuture<Void> put(String id, ValueAndMetadata valueAndMetadata) {
-        return AsyncHelper.<Exception>wrapRunnable(executor, () -> {
+    public CompletableFuture<PutResult> put(ValueAndMetadata valueAndMetadata) {
+        return AsyncHelper.wrapSupplier(executor, () -> {
+            String id = hash.hash(valueAndMetadata.value());
             String root = idToFileBaseName.apply(id);
-            Files.writeString(Path.of(root + "." + metadataExtension), JsonHelper.mapper.writeValueAsString(valueAndMetadata.metadata()));
-            Files.write(Path.of(root + "." + valueAndMetadata.metadata().extension()), valueAndMetadata.value());
+            Path metaDataPath = Path.of(root + "." + metadataExtension);
+            try {
+                var metadataString = Files.readString(metaDataPath);
+                var metadata = JsonHelper.mapper.readValue(metadataString, Metadata.class);
+                return new PutResult(id, Optional.of(metadata));
+            } catch (IOException e) {
+                File file = metaDataPath.getParent().toFile();
+                var create = file.mkdirs();
+                String metaDataString = JsonHelper.mapper.writeValueAsString(valueAndMetadata.metadata());
+                Files.writeString(metaDataPath, metaDataString, StandardOpenOption.CREATE_NEW);
+                Files.write(Path.of(root + "." + valueAndMetadata.metadata().extension()), valueAndMetadata.value());
+                return new PutResult(id, Optional.empty());
+            }
         });
     }
 }
